demo/lab-docker-k8s/02-k8s-traefik/traefik/ingress.yml
# tag::ingress[]
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-ingress
  namespace: devoxx
  labels:
    guilde: reverse-proxy
  annotations:
    kubernetes.io/ingress.class: 'traefik'
spec:
  rules:
  - host:
    http:
      paths:
      - host: {lab-domain}
        path:
        backend:
          serviceName: traefik-devoxx-dashboard
          servicePort: 80
# end::ingress[]
